# Tic-tac-toe-TCP

./: .gitignore  CHANGELOG.md  README.md  main.py  mise.toml  pyproject.toml  requirements.txt  server.py
docs/: INTEGRACAO_FRONT.md
game/: __init__.py  board.py  models.py  tic_tac_toe.py
server/: __init__.py  client_handler.py  game_server.py  line_io.py  matchmaker.py  network_info.py  protocol.py  remote_session.py  waiting_player.py
tests/: test_state_broadcast.py  test_tic_tac_toe.py
