[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tic-tac-toe"
version = "0.1.0"
description = "Servidor tic-tac-toe"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["game", "server"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
# O é o nome natural do jogador no jogo da velha (conflito E741 com variável `O`).
"game/models.py" = ["E741"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["game", "server"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
